Добавляет сетку в слайдер

--- a/index.html
+++ b/index.html
@@ -42,89 +42,87 @@
       <div class="page-container">
         <h1 class="visually-hidden">Интернет-магазин «Device»</h1>
         <section class="slider">
-          <div class="slider-container">
-            <h2 class="visually-hidden">Популярные товары</h2>
-            <div class="slide-1">
-              <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
-                alt="Фото квадрокоптера">
-              <div class="slider-info-container">
-                <h3 class="main-title">Порхает как бабочка, жалит как пчела!</h3>
-                <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
-                  замаскированным
-                  под
-                  стандартную камеру.</p>
-                <button class="button button-primary" type="button">Подробнее</button>
-                <dl class="table-info">
-                  <dt class="table-title">Дальность полёта</dt>
-                  <dd class="table-description">800 М</dd>
-                  <dt class="table-title">Радиус поражения</dt>
-                  <dd class="table-description">50 М</dd>
-                </dl>
-              </div>
+          <h2 class="visually-hidden">Популярные товары</h2>
+          <div class="slide">
+            <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
+              alt="Фото квадрокоптера">
+            <div class="slider-info-container">
+              <h3 class="main-title">Порхает как бабочка, жалит как пчела!</h3>
+              <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
+                замаскированным
+                под
+                стандартную камеру.</p>
+              <button class="button button-primary" type="button">Подробнее</button>
+              <dl class="table-info">
+                <dt class="table-title">Дальность полёта</dt>
+                <dd class="table-description">800 М</dd>
+                <dt class="table-title">Радиус поражения</dt>
+                <dd class="table-description">50 М</dd>
+              </dl>
             </div>
+          </div>
 
-            <div class="slide-2">
-              <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
-                alt="Фото фитнес-браслета">
-              <div class="slider-info-container">
-                <h3 class="main-title">Худеем правильно!</h3>
-                <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
-                  соблюдать
-                  диету.</p>
-                <button class="button button-primary" type="button">Подробнее</button>
-                <dl class="table-info">
-                  <dt class="table-title">Без подзарядки</dt>
-                  <dd class="table-description">48 часов</dd>
-                </dl>
-              </div>
+          <div class="slide">
+            <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
+              alt="Фото фитнес-браслета">
+            <div class="slider-info-container">
+              <h3 class="main-title">Худеем правильно!</h3>
+              <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
+                соблюдать
+                диету.</p>
+              <button class="button button-primary" type="button">Подробнее</button>
+              <dl class="table-info">
+                <dt class="table-title">Без подзарядки</dt>
+                <dd class="table-description">48 часов</dd>
+              </dl>
             </div>
+          </div>
 
-            <div class="slide-3">
-              <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
-                alt="Фото палки для селфи">
-              <div class="slider-info-container">
-                <h3 class="main-title">Делай селфи, как Бен Стиллер!</h3>
-                <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
-                  метров
-                  длиной и весом всего 5 кг.</p>
-                <button class="button button-primary" type="button">Подробнее</button>
-                <dl class="table-info">
-                  <dt class="table-title">Длина палки</dt>
-                  <dd class="table-description">8,5 М</dd>
-                  <dt class="table-title">Вес палки</dt>
-                  <dd class="table-description">5 КГ</dd>
-                  <dt class="table-title">Материал</dt>
-                  <dd class="table-description">Карбон</dd>
-                </dl>
-              </div>
+          <div class="slide">
+            <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
+              alt="Фото палки для селфи">
+            <div class="slider-info-container">
+              <h3 class="main-title">Делай селфи, как Бен Стиллер!</h3>
+              <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
+                метров
+                длиной и весом всего 5 кг.</p>
+              <button class="button button-primary" type="button">Подробнее</button>
+              <dl class="table-info">
+                <dt class="table-title">Длина палки</dt>
+                <dd class="table-description">8,5 М</dd>
+                <dt class="table-title">Вес палки</dt>
+                <dd class="table-description">5 КГ</dd>
+                <dt class="table-title">Материал</dt>
+                <dd class="table-description">Карбон</dd>
+              </dl>
             </div>
+          </div>
 
-            <button class="slider-button slider-prev" type="button">
-              <span class="visually-hidden">Предыдущий товар</span>
-            </button>
-            <button class="slider-button slider-next" type="button">
-              <span class="visually-hidden">Следующий товар</span>
-            </button>
+          <button class="slider-button slider-prev" type="button">
+            <span class="visually-hidden">Предыдущий товар</span>
+          </button>
+          <button class="slider-button slider-next" type="button">
+            <span class="visually-hidden">Следующий товар</span>
+          </button>
 
-            <div class="pagination-conteiner">
-              <ol class="slider-pagination">
-                <li class="slider-pagination-item">
-                  <button class="slider-pagination-button slider-pagination-button-current" type="button">
-                    <span class="visually-hidden">1 Слайд</span>
-                  </button>
-                </li>
-                <li class="slider-pagination-item">
-                  <button class="slider-pagination-button" type="button">
-                    <span class="visually-hidden">2 Слайд</span>
-                  </button>
-                </li>
-                <li class="slider-pagination-item">
-                  <button class="slider-pagination-button" type="button">
-                    <span class="visually-hidden">3 Слайд</span>
-                  </button>
-                </li>
-              </ol>
-            </div>
+          <div class="pagination-conteiner">
+            <ol class="slider-pagination">
+              <li class="slider-pagination-item">
+                <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                  <span class="visually-hidden">1 Слайд</span>
+                </button>
+              </li>
+              <li class="slider-pagination-item">
+                <button class="slider-pagination-button" type="button">
+                  <span class="visually-hidden">2 Слайд</span>
+                </button>
+              </li>
+              <li class="slider-pagination-item">
+                <button class="slider-pagination-button" type="button">
+                  <span class="visually-hidden">3 Слайд</span>
+                </button>
+              </li>
+            </ol>
           </div>
         </section>
 
