--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="page-header">
-      <div class="header-container">
+      <div class="container">
         <a class="page-header-link" href="#">
           <img class="page-header-logo" src="images/logo-header.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device»">
@@ -197,7 +197,7 @@
         </section>
 
         <section class="company-info">
-          <div class="container">
+          <div class="company-info-container">
             <div class="about-us">
               <h2 class="main-title">О нас</h2>
               <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
