--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,7 @@
         <a class="user-link user-basket" href="#">Корзина</a>
       </div>
       <div class="catalog-container">
-        <button class="button catalog-button">Каталог товаров</button>
+        <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров</a>
       </div>
       <nav class="navigation">
         <a class="navigation-link" href="#">Доставка</a>
@@ -37,178 +37,181 @@
     </div>
   </header>
 
-  <main class="main-inner">
-    <section class="catalog-title">
-      <div class="container">
-        <h1 class="main-title">Моноподы для селфи</h1>
-        <ul class="breadcrumbs-list">
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="index.html">Главная</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link" href="#">Каталог товаров</a>
-          </li>
-          <li class="breadcrumbs-item">
-            <a class="breadcrumbs-link">Моноподы для селфи</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="catalog-products">
-      <div class="container">
-        <div class="filter-container">
-          <h2 class="catalog-products-title">Фильтр:</h2>
-          <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Цвет</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="checkbox" name="Черный" checked>
-                    Черный
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="checkbox" name="Белый" checked>
-                    Белый
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="checkbox" name="Синий">
-                    Синий
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="checkbox" name="Красный">
-                    Красный
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="checkbox" name="Розовый">
-                    Розовый
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Bluetooth</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="radio" name="product-group" value="yes" checked>
-
-                    Есть
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="property">
-                    <input class="property-input" type="radio" name="product-group" value="no">
-
-                    Нет
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-
-            <button class="button button-primary" type="submit">Показать</button>
-          </form>
+  <main class="main-inner main-container">
+    <div class="page-container">
+      <section class="catalog-title">
+        <div class="breadcrumbs-container">
+          <h1 class="main-title">Моноподы для селфи</h1>
+          <ul class="breadcrumbs-list">
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link" href="#">Каталог товаров</a>
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Моноподы для селфи</a>
+            </li>
+          </ul>
         </div>
+      </section>
 
+      <section class="catalog-products">
+        <div class="container">
+          <div class="filter-container">
+            <h2 class="catalog-products-title">Фильтр:</h2>
+            <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
 
-        <section class="sorting-menu">
-          <div class="sorting-menu-container">
-            <h2 class="select-control-title">Сортировка:</h2>
+              <fieldset class="catalog-filter-group">
+                <legend class="catalog-filter-title">Цвет</legend>
+                <ul class="catalog-filter-list">
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="checkbox" name="Черный" checked>
+                      Черный
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="checkbox" name="Белый" checked>
+                      Белый
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="checkbox" name="Синий">
+                      Синий
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="checkbox" name="Красный">
+                      Красный
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="checkbox" name="Розовый">
+                      Розовый
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
 
-            <select class="select-control">
-              <option value="popular">Популярные</option>
-              <option value="popular">NEW</option>
-            </select>
-            <button class="sorting-menu-button">
-              <span class="visually-hidden">Сначала дешевые</span>
-            </button>
-            <button class="sorting-menu-button">
-              <span class="visually-hidden">Сначала дорогие</span>
-            </button>
+              <fieldset class="catalog-filter-group">
+                <legend class="catalog-filter-title">Bluetooth</legend>
+                <ul class="catalog-filter-list">
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="radio" name="product-group" value="yes" checked>
+
+                      Есть
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="property">
+                      <input class="property-input" type="radio" name="product-group" value="no">
+
+                      Нет
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+
+              <button class="button button-primary" type="submit">Показать</button>
+            </form>
           </div>
-        </section>
 
-        <section class="product-list">
-          <div class="product-list-container">
-            <section class="prouct-card">
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg" width="360"
-                  height="380" alt="Фотография любительской селфи-палки">
-                <h3 class="product-card-title">Любительская селфи-палка</h3>
-              </a>
-              <span class="product-card-price">500 ₽</span>
-            </section>
-            <section>
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg" width="360"
-                  height="380" alt="Фотография профессиональной селфи-палки">
-                <h3 class="product-card-title">Профессиональная селфи-палка</h3>
-              </a>
-              <span class="product-card-price">1 500 ₽</span>
-            </section>
-            <section>
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg" width="360"
-                  height="380" alt="Фотография непотопляемой селфи-палки">
-                <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
-              </a>
-              <span class="product-card-price">2 500 ₽</span>
-            </section>
-            <section>
-              <a class="product-card-link" href="#">
-                <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg" width="360"
-                  height="380" alt="Фотография селфи-палки в виде руки">
-                <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
-              </a>
-              <span class="product-card-price">1 500 ₽</span>
+          <div class="catalog-right-column">
+            <section class="sorting-menu">
+              <div class="sorting-menu-container">
+                <h2 class="select-control-title">Сортировка:</h2>
+
+                <select class="select-control">
+                  <option value="popular">Популярные</option>
+                  <option value="popular">NEW</option>
+                </select>
+                <button class="sorting-menu-button">
+                  <span class="visually-hidden">Сначала дешевые</span>
+                </button>
+                <button class="sorting-menu-button">
+                  <span class="visually-hidden">Сначала дорогие</span>
+                </button>
+              </div>
             </section>
 
-            <button class="button button-secondary" type="button">Загрузить ещё</button>
-
-            <section class="pagination-menu">
-              <ul class="pagination">
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-prev-disabled" href="">
-                    <span class="pagination-prev">Назад</span>
+            <section class="product-list">
+              <div class="product-list-container">
+                <section class="prouct-card">
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-1.jpg" width="360"
+                      height="380" alt="Фотография любительской селфи-палки">
+                    <h3 class="product-card-title">Любительская селфи-палка</h3>
                   </a>
-                </li>
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-number" href="">1</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-number" href="">2</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-number" href="">3</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-number" href="">...</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-number" href="">15</a>
-                </li>
-                <li class="pagination-item">
-                  <a class="pagination-link pagination-next" href="">
-                    <span class="pagination-next">Вперёд</span>
+                  <span class="product-card-price">500 ₽</span>
+                </section>
+                <section>
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-2.jpg" width="360"
+                      height="380" alt="Фотография профессиональной селфи-палки">
+                    <h3 class="product-card-title">Профессиональная селфи-палка</h3>
                   </a>
-                </li>
-              </ul>
+                  <span class="product-card-price">1 500 ₽</span>
+                </section>
+                <section>
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-3.jpg" width="360"
+                      height="380" alt="Фотография непотопляемой селфи-палки">
+                    <h3 class="product-card-title">Непотопляемая селфи-палка</h3>
+                  </a>
+                  <span class="product-card-price">2 500 ₽</span>
+                </section>
+                <section>
+                  <a class="product-card-link" href="#">
+                    <img class="product-card-image" src="images/catalog-photos/catalog-products-photo-4.jpg" width="360"
+                      height="380" alt="Фотография селфи-палки в виде руки">
+                    <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+                  </a>
+                  <span class="product-card-price">1 500 ₽</span>
+                </section>
+
+                <button class="button button-secondary" type="button">Загрузить ещё</button>
+
+                <section class="pagination-menu">
+                  <ul class="pagination">
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-prev-disabled" href="">
+                        <span class="pagination-prev">Назад</span>
+                      </a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="">1</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="">2</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="">3</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="">...</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-number" href="">15</a>
+                    </li>
+                    <li class="pagination-item">
+                      <a class="pagination-link pagination-next" href="">
+                        <span class="pagination-next">Вперёд</span>
+                      </a>
+                    </li>
+                  </ul>
+                </section>
+              </div>
             </section>
           </div>
-        </section>
-      </div>
-    </section>
+        </div>
+      </section>
+    </div>
   </main>
 
   <footer class="page-footer">
