Исправляет хэдер на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -16,13 +16,15 @@
       <div class="search-form-container">
         <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="search">
-            <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту">
+            <input class="search-input" type="search" name="search-field" placeholder="Поиск по сайту"
+              value="Текст поиска">
           </label>
           <button class="button search-button" type="submit">Найти</button>
         </form>
-        <a class="user-link user-login" href="#">Войти</a>
+        <a class="user-link user-login" href="#">Коля Петухов</a>
       </div>
       <div class="user-link-container">
+        <a class="user-link user-compare" href="#">Выйти</a>
         <a class="user-link user-compare" href="#">Сравнить</a>
         <a class="user-link user-basket" href="#">Корзина</a>
       </div>
