Добавляет микросетку в хэдер

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <a class="user-link user-compare" href="#">Сравнить</a>
           <a class="user-link user-basket" href="#">Корзина</a>
         </div>
+      </div>
+      <div class="container">
         <div class="catalog-container">
           <a class="navigation-link navigation-catalog" href="catalog.html">Каталог товаров</a>
         </div>
