Применяет стили микросеток
Применяет стили к двум разделам: раздел категория продуктов и раздел преимуществ

--- a/index.html
+++ b/index.html
@@ -164,21 +164,21 @@
             <button class="advantages-button" type="button">Кредит</button>
           </div>
           <div class="tab-description">
-            <h3 class="main-title">Доставка</h3>
+            <h3 class="main-title advantages-title">Доставка</h3>
             <p class="tab-text">Мы с удовольствием доставим ваш товар прямо
               к вашему подъезду совершенно бесплатно! Ведь
               мы неплохо заработаем, поднимая его на ваш этаж.</p>
           </div>
 
           <div class="tab-description">
-            <h3 class="main-title">Гарантия</h3>
+            <h3 class="main-title advantages-title">Гарантия</h3>
             <p class="tab-text">Если из-за возгорания купленного у нас товара у вас
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.</p>
           </div>
 
           <div class="tab-description">
-            <h3 class="main-title">Кредит</h3>
+            <h3 class="main-title advantages-title">Кредит</h3>
             <p class="tab-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас
               наиболее
               выгодные условия кредита. Выгодные для банка, разумеется.</p>
