Меняет стили в блоке с рассылкой

--- a/index.html
+++ b/index.html
@@ -244,9 +244,11 @@
 
       <section class="newsletter">
         <div class="container">
-          <h2 class="main-title">Подпишитесь на рассылку</h2>
-          <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,
-            длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+          <div class="newsletter-header">
+            <h2 class="main-title">Подпишитесь на рассылку</h2>
+            <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,
+              длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+          </div>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="newsletter-email">Email</label>
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
