Исправляет стили у слайдера

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img class="slider-image" src="images/slider-img/slider-1.png" width="560" height="560"
               alt="Фото квадрокоптера">
             <div class="slider-info-container">
-              <h3 class="main-title">Порхает как бабочка, жалит как пчела!</h3>
+              <h3 class="main-title slider-title">Порхает как бабочка, жалит как пчела!</h3>
               <p class="slider-text">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
                 замаскированным
                 под
@@ -68,7 +68,7 @@
             <img class="slider-image" src="images/slider-img/slider-2.png" width="560" height="560"
               alt="Фото фитнес-браслета">
             <div class="slider-info-container">
-              <h3 class="main-title">Худеем правильно!</h3>
+              <h3 class="main-title slider-title">Худеем правильно!</h3>
               <p class="slider-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и
                 соблюдать
                 диету.</p>
@@ -84,7 +84,7 @@
             <img class="slider-image" src="images/slider-img/slider-3.png" width="560" height="560"
               alt="Фото палки для селфи">
             <div class="slider-info-container">
-              <h3 class="main-title">Делай селфи, как Бен Стиллер!</h3>
+              <h3 class="main-title slider-title">Делай селфи, как Бен Стиллер!</h3>
               <p class="slider-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!)
                 метров
                 длиной и весом всего 5 кг.</p>
@@ -202,7 +202,7 @@
       <section class="company-info">
         <div class="company-info-container">
           <div class="about-us">
-            <h2 class="main-title">О нас</h2>
+            <h2 class="main-title about-us-title">О нас</h2>
             <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
               нас.
             </p>
@@ -224,7 +224,7 @@
           </div>
 
           <div class="contacts">
-            <h2 class="main-title">Контакты</h2>
+            <h2 class="main-title contacts-title">Контакты</h2>
             <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис.
               Заодно сможете проверить работоспособность покупки.</p>
             <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
@@ -245,7 +245,7 @@
       <section class="newsletter">
         <div class="container">
           <div class="newsletter-header">
-            <h2 class="main-title">Подпишитесь на рассылку</h2>
+            <h2 class="main-title newsletter-title">Подпишитесь на рассылку</h2>
             <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,
               длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           </div>
