Нормализует отступы в футере

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <h2 class="visually-hidden">Адрес</h2>
           <img class="footer-contacts-logo" src="images/logo-footer.svg" width="145" height="36"
             alt="Логотип интернет-магазина «Device»">
-          <address class="contacts-address">
+          <address class="footer-contacts-address">
             <p class="footer-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
           </address>
         </section>
@@ -306,7 +306,7 @@
         <section class="footer-connection">
           <h2 class="visually-hidden">Позвоните нам</h2>
           <address class="footer-contacts-address">
-            <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            <a class="footer-contacts-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
             <img class="about-text" src="images/html-academy-icon.svg" width="115" height="33" alt="html-academy-logo">
