--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="container">
           <div class="newsletter-header">
             <h2 class="main-title newsletter-title">Подпишитесь на рассылку</h2>
-            <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,
+            <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,<br>
               длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           </div>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -305,7 +305,7 @@
 
         <section class="footer-connection">
           <h2 class="visually-hidden">Позвоните нам</h2>
-          <address class="footer-contacts-address">
+          <address class="footer-phone">
             <a class="footer-contacts-phone" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           </address>
           <a class="htmlacademy-link" href="https://htmlacademy.ru/">
