--- a/index.html
+++ b/index.html
@@ -251,13 +251,16 @@
             <p class="newsletter-text">Еженедельный дайджест с обзорами новинок,<br>
               длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           </div>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label for="newsletter-email">Email</label>
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button button-extra" type="submit">Подписаться</button>
-          </form>
-          <span class="newsletter-remark">Это бесплатно</span>
+          <div class="email-container">
+            <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+              <label for="newsletter-email">
+                <input class="email-input" placeholder="Ваш e-mail" type="email" name="newsletter-email"
+                  id="newsletter-email" required>
+              </label>
+              <button class="button button-extra" type="submit">Подписаться</button>
+            </form>
+            <span class="newsletter-remark">Это бесплатно</span>
+          </div>
         </div>
       </section>
     </main>
