--- a/index.html
+++ b/index.html
@@ -165,25 +165,27 @@
             <button class="advantages-button" type="button">Гарантия</button>
             <button class="advantages-button" type="button">Кредит</button>
           </div>
-          <div class="tab-description">
-            <h3 class="main-title advantages-title">Доставка</h3>
-            <p class="tab-text">Мы с удовольствием доставим ваш товар прямо
-              к вашему подъезду совершенно бесплатно! Ведь
-              мы неплохо заработаем, поднимая его на ваш этаж.</p>
-          </div>
+          <div class="tab-description-container">
+            <div class="tab-description">
+              <h3 class="main-title advantages-title">Доставка</h3>
+              <p class="tab-text">Мы с удовольствием доставим ваш товар прямо
+                к вашему подъезду совершенно бесплатно! Ведь
+                мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            </div>
 
-          <div class="tab-description">
-            <h3 class="main-title advantages-title">Гарантия</h3>
-            <p class="tab-text">Если из-за возгорания купленного у нас товара у вас
-              сгорит дом — не переживайте, мы выдадим вам новый.
-              Товар, не дом, конечно же.</p>
-          </div>
+            <div class="tab-description">
+              <h3 class="main-title advantages-title">Гарантия</h3>
+              <p class="tab-text">Если из-за возгорания купленного у нас товара у вас
+                сгорит дом — не переживайте, мы выдадим вам новый.
+                Товар, не дом, конечно же.</p>
+            </div>
 
-          <div class="tab-description">
-            <h3 class="main-title advantages-title">Кредит</h3>
-            <p class="tab-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас
-              наиболее
-              выгодные условия кредита. Выгодные для банка, разумеется.</p>
+            <div class="tab-description">
+              <h3 class="main-title advantages-title">Кредит</h3>
+              <p class="tab-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас
+                наиболее
+                выгодные условия кредита. Выгодные для банка, разумеется.</p>
+            </div>
           </div>
         </div>
       </section>
